Added tile info preview App now shows a preview of the hovered tile when hovering.  Also rendering a selector over the tile.  Not sure if this is exactly how I want to keep it, but it should prove handy in the future.  Also, I really NEED to fix all of the reciprocal operations with scaling and whatnot.  Namely in this app, buttons, and clips.

--- a/TileMapEditor/pom.xml
+++ b/TileMapEditor/pom.xml
@@ -26,9 +26,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.9</version>
+    </dependency>
+    <dependency>
       <groupId>com.tylerroyer.molasses</groupId>
       <artifactId>MolassesEngine</artifactId>
-      <version>0.2.5</version>
+      <version>0.2.10</version>
     </dependency>
   </dependencies>
 
